--- a/index.html
+++ b/index.html
@@ -108,39 +108,40 @@
     <div class="own-container">
         <p>Kateqoriyalar</p>
         <div class="techniques">
-            <div class="d-flex flex-wrap">
-                <div class="col-3">
-                    <p>Avtokranlar</p>
+            <div class="d-flex flex-wrap gap-5">
+                <div class="col-2 tech-card">
+                    <p class="tech-cards_p">Avtokranlar</p>
                     <img src="./assets/photo/image 39.png" alt="photo">
                 </div>
-                <div class="col-3">
-                    <p>Avtokranlar</p>
-                    <img src="./assets/photo/home-page-2.png" alt="photo">
+                <div class="col-2 tech-card">
+                    <p class="tech-cards_p">Avtokranlar</p>
+                    <img src="./assets/photo/image 39.png" alt="photo">
                 </div>
-                <div class="col-3">
-                    <p>Avtokranlar</p>
-                    <img src="./assets/photo/home-page-3.png" alt="photo">
+                <div class="col-2 tech-card">
+                    <p class="tech-cards_p">Avtokranlar</p>
+                    <img src="./assets/photo/image 39.png" alt="photo">
                 </div>
-                <div class="col-3">
-                    <p>Avtokranlar</p>
-                    <img src="./assets/photo/home-page-4.png" alt="photo">
+                <div class="col-2 tech-card">
+                    <p class="tech-cards_p">Avtokranlar</p>
+                    <img src="./assets/photo/image 39.png" alt="photo">
                 </div>
-                <div class="col-3">
-                    <p>Avtokranlar</p>
-                    <img src="./assets/photo/home-page-5.png" alt="photo">
+                <div class="col-2 tech-card">
+                    <p class="tech-cards_p">Avtokranlar</p>
+                    <img src="./assets/photo/image 39.png" alt="photo">
                 </div>
-                <div class="col-3">
-                    <p>Avtokranlar</p>
-                    <img src="./assets/photo/home-page-6.png" alt="photo">
+                <div class="col-2 tech-card">
+                    <p class="tech-cards_p">Avtokranlar</p>
+                    <img src="./assets/photo/image 39.png" alt="photo">
                 </div>
-                <div class="col-3">
-                    <p>Avtokranlar</p>
-                    <img src="./assets/photo/home-page-7.png" alt="photo">
+                <div class="col-2 tech-card">
+                    <p class="tech-cards_p">Avtokranlar</p>
+                    <img src="./assets/photo/image 39.png" alt="photo">
                 </div>
-                <div class="col-3">
-                    <p>Avtokranlar</p>
-                    <img src="./assets/photo/home-page-8.png" alt="photo">
+                <div class="col-2 tech-card">
+                    <p class="tech-cards_p">Avtokranlar</p>
+                    <img src="./assets/photo/image 39.png" alt="photo">
                 </div>
+               
             </div>
         </div>
     </div>
