home-page-changes

--- a/index.html
+++ b/index.html
@@ -48,69 +48,73 @@
     </header>
     <div class="nav-bar">
         <div class="own-container">
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="./index.html">
-                        <img src="./assets/logo/logo.png" alt="logo">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Əsas səhifə</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Haqqımızda</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Texnikalar
+            <div class="d-flex justify-content-between ">
+                <div class="col">
+                    <nav class="navbar navbar-expand-lg">
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="./index.html">
+                                <img src="./assets/logo/logo.png" alt="logo">
+                            </a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto   gap-5">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="#">Əsas səhifə</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Haqqımızda</a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                            data-bs-toggle="dropdown" aria-expanded="false">
+                                            Texnikalar
 
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Avtokranlar</a></li>
-                                    <li><a class="dropdown-item" href="#">Traktorlar</a></li>
-                                    <li><a class="dropdown-item" href="#">Qaldırıcı səbətlər</a></li>
-                                    <li><a class="dropdown-item" href="#">Forkliftlər</a></li>
-                                    <li><a class="dropdown-item" href="#">Katok</a></li>
-                                    <li><a class="dropdown-item" href="#">Shacman</a></li>
-                                    <li><a class="dropdown-item" href="#">Bobcat</a></li>
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Avtokranlar</a></li>
+                                            <li><a class="dropdown-item" href="#">Traktorlar</a></li>
+                                            <li><a class="dropdown-item" href="#">Qaldırıcı səbətlər</a></li>
+                                            <li><a class="dropdown-item" href="#">Forkliftlər</a></li>
+                                            <li><a class="dropdown-item" href="#">Katok</a></li>
+                                            <li><a class="dropdown-item" href="#">Shacman</a></li>
+                                            <li><a class="dropdown-item" href="#">Bobcat</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" aria-disabled="true">İcarə şərtləri</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" aria-disabled="true">Blog</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" aria-disabled="true">Elaqe</a>
+                                    </li>
+
                                 </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-disabled="true">İcarə şərtləri</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-disabled="true">Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-disabled="true">Elaqe</a>
-                            </li>
-
-                        </ul>
-                        <div class="col-lg-2 col-md-">
-                            <div class="language d-flex justify-content-end gap-2">
-                                <span class="lang-hover">Az</span>
-                                <span>|</span>
-                                <span class="lang-hover">EN</span>
-                                <span>|</span>
-                                <span class="lang-hover">RU</span>
+                                <div class="col-lg-2 col-md-">
+                                    <div class="language d-flex justify-content-end gap-2">
+                                        <span class="lang-hover">Az</span>
+                                        <span>|</span>
+                                        <span class="lang-hover">EN</span>
+                                        <span>|</span>
+                                        <span class="lang-hover">RU</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </nav>
                 </div>
-            </nav>
+            </div>
         </div>
     </div>
     <div class="own-container">
         <div class="row">
             <div class="sec-1">
-                <div class="col">
+                <div class="col-6 left-col">
                     <p class="sec-1-p1">Ağır texnikanızı bizdən satın alın</p>
                     <p class="sec-1-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                         Ipsum has been the
@@ -119,7 +123,7 @@
                         and scrambled</p>
                     <button class="sec-1-button">Ətraflı</button>
                 </div>
-                <div class="col">
+                <div class="col-6 right-col">
                     <img src="./assets/photo/image 1.png" alt="photo">
                 </div>
             </div>
@@ -143,28 +147,28 @@
                         <img src="./assets/photo/home-page-2.png" alt="photo">
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12">
+                <div class="col-12 col-lg-3 col-md-6 col-sm-12 ">
                     <div class="tech-card">
 
                         <p class="tech-cards_p">Qaldırıcı səbətlər</p>
                         <img src="./assets/photo/home-page-3.png" alt="photo">
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12">
+                <div class="col-12 col-lg-3 col-md-6 col-sm-12 ">
                     <div class="tech-card">
 
                         <p class="tech-cards_p">Forkliftlər</p>
                         <img src="./assets/photo/home-page-4.png" alt="photo">
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12">
+                <div class="col-12 col-lg-3 col-md-6 col-sm-12 ">
                     <div class="tech-card">
 
                         <p class="tech-cards_p">Katok</p>
                         <img src="./assets/photo/home-page-5.png" alt="photo">
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12">
+                <div class="col-12 col-lg-3 col-md-6 col-sm-12 ">
                     <div class="tech-card">
 
                         <p class="tech-cards_p">Shacman</p>
@@ -188,19 +192,107 @@
         </div>
     </div>
     <div class="own-container">
-        <div class="row">
-            <div class="col-6">
+        <div class="row mt-5">
+            <div class="col-md d-none d-sm-block">
                 <div class="left-sc-img">
                     <img src="./assets/photo/home-page-left-img1.png" alt="">
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 col-lg-6 col-sm-12 col-md-12 col-12">
                 <div class="right-sc">
-                <img src="./assets/photo/home-page-right.png" alt="">
+                    <img src="./assets/photo/home-page-right.png" alt="">
+                </div>
+                <div class="right-sc-text">
+                    <p class="sec-1-p1">Mega Texnika-da sınaqdan keçirilmiş texnikalar</p>
+                    <p class="sec-1-p2">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled
+                    </p>
+                    <button class="sec-1-button">Haqqımızda</button>
                 </div>
             </div>
         </div>
     </div>
+    <div class="own-container">
+        <div class="techniques">
+            <p class="tech-card-head_P">Texnikalar</p>
+            <div class="row">
+                <div class="col">
+                    <div class="tech-cards">
+                        <img src="./assets/photo/home-page-2.png" alt="">
+                        <div class="tech-card-text">
+                            <p class="tech-card-p1">Məhsulun adı</p>
+                            <p class="tech-card-p2">Ekskavator</p>
+                            <p class="tech-card-p3">2022</p>
+                        </div>
+                        <div class="tech-card-text2">
+                            <p>1000 AZN / ay</p>
+                            <p>100 AZN / gün</p>
+                        </div>
+                        <div class="tech-card-btn">
+                            <button>İcarə et</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="tech-cards">
+                        <img src="./assets/photo/home-page-6.png" alt="">
+                        <div class="tech-card-text">
+                            <p class="tech-card-p1">Məhsulun adı</p>
+                            <p class="tech-card-p2">Ekskavator</p>
+                            <p class="tech-card-p3">2022</p>
+                        </div>
+                        <div class="tech-card-text2">
+                            <p>1000 AZN / ay</p>
+                            <p>100 AZN / gün</p>
+                        </div>
+                        <div class="tech-card-btn">
+                            <button>İcarə et</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="tech-cards">
+                        <img src="./assets/photo/home-page-8.png" alt="">
+                        <div class="tech-card-text">
+                            <p class="tech-card-p1">Məhsulun adı</p>
+                            <p class="tech-card-p2">Ekskavator</p>
+                            <p class="tech-card-p3">2022</p>
+                        </div>
+                        <div class="tech-card-text2">
+                            <p>1000 AZN / ay</p>
+                            <p>100 AZN / gün</p>
+                        </div>
+                        <div class="tech-card-btn">
+                            <button>İcarə et</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="tech-cards">
+                        <img src="./assets/photo/home-page-4.png" alt="">
+                        <div class="tech-card-text">
+                            <p class="tech-card-p1">Məhsulun adı</p>
+                            <p class="tech-card-p2">Ekskavator</p>
+                            <p class="tech-card-p3">2022</p>
+                        </div>
+                        <div class="tech-card-text2">
+                            <p>1000 AZN / ay</p>
+                            <p>100 AZN / gün</p>
+                        </div>
+                        <div class="tech-card-btn">
+                            <button>İcarə et</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tech-card-botto-button">
+              <button>Hamısına bax</button>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
