--- a/index.html
+++ b/index.html
@@ -288,11 +288,18 @@
                 </div>
             </div>
             <div class="tech-card-botto-button">
-              <button>Hamısına bax</button>
+                <button>Hamısına bax</button>
             </div>
         </div>
     </div>
-
+    <div class="marks">
+        <div class="mark-head-p">
+            <p>Markalar</p>
+        </div>
+        <div class="mark">
+            <img src="./assets/photo/marka7.png" alt="photo">
+        </div>
+    </div>
 </body>
 
 </html>
