--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+
+
+
+
     <link rel="stylesheet" href="./assets/scss/style.css">
 
     <title>Document</title>
@@ -29,7 +34,39 @@
 
 <body>
     <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>const swiper = new Swiper('.swiper', {
+            // Optional parameters
+            direction: 'horizontal',
+            slidesPerView: 5,
+            loop: true,
+            breakpoints: {
+                // when window width is >= 320px
+                320: {
+                    slidesPerView: 2,
+                    spaceBetween: 20
+                },
+                // when window width is >= 480px
+                480: {
+                    slidesPerView: 3,
+                    spaceBetween: 30
+                },
+                // when window width is >= 640px
+                640: {
+                    slidesPerView: 4,
+                    spaceBetween: 40
+                },
+                992: {
+                    slidesPerView: 7,
+                    spaceBetween: 10
+                }
+            }
+        });
+
+    </script>
+    <!-- swiper home page -->
     <header>
         <div class="own-container">
             <div class="d-flex align-items-center justify-content-between ">
@@ -292,14 +329,46 @@
             </div>
         </div>
     </div>
+
     <div class="marks">
         <div class="mark-head-p">
             <p>Markalar</p>
         </div>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark1.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark2.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark3.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark4.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark5.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark6.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark7.png" alt="photo">
+                </div>
+            </div>
+        </div>
         <div class="mark">
-            <img src="./assets/photo/marka7.png" alt="photo">
+
+
+
+
         </div>
     </div>
+
+    
+
 </body>
 
 </html>
